# youtube-uploader

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  UIUX_PROMPT.md  YOUTUBE_UPLOADER.md  YOUTUBE_UPLOADER_BUILD_PROMPT.md  YOUTUBE_UPLOADER_MICROSERVICE.md  pyproject.toml
api/: app.py  auth.py  cache.py  capabilities.py  deps.py  direct_upload.py  endpoint_docs.py  job_ingest.py  llm_docs.py  middleware.py  oauth_sessions.py  openapi_enrich.py  run_tracker.py  schemas.py  server.py  static_dir.py
cli/: main.py
config/: channels.yaml  channels.yaml.example
deploy/: cloud-run-job.md  cloud-run.md  cloud-scheduler-reconcile.md  cloud-scheduler-upload-at.md  cloudrun.env.example  github-actions-cicd.md
scripts/: check_r2_env.py  deploy-cloudrun.ps1  run-all-channels.ps1  run-all-channels.sh  run-channel.ps1  run-channel.sh  scan_bucket_prefixes.py  setup-github-cicd.sh  smoke-upload-at.sh
tests/: test_analytics.py  test_api.py  test_assembly_register.py  test_auth.py  test_bucket_layout.py  test_cache_signals.py  test_category_store.py  test_channel_list.py  test_channel_store.py  test_channel_verification.py  test_job_defaults.py  test_job_lock.py  test_job_metadata.py  test_job_schedule.py  test_job_store.py  test_job_views.py  test_llm_docs.py  test_metadata.py  test_oauth.py  test_oauth_web.py  test_registry.py  test_retry.py  test_scheduler.py  test_state_store.py  test_storage.py  test_today_pulse.py  test_upload_at_scheduler.py  test_upload_reconcile.py
uploader/: __init__.py  analytics_service.py  bucket_layout.py  channels.py  (+28 more)
(+4 files in other folders)
